--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -25,6 +25,7 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+li { list-style: none; }
 body {
 	line-height: 1.6;
     font-size:15px;    
