--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400&display=swap');
+
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -25,15 +26,29 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-li { list-style: none; }
 body {
 	line-height: 1.6;
-    font-size:15px;    
+    color:#333; 
     font-family: 'Noto Sans KR', sans-serif;
 }
-a {
-	line-height: 1.6;
-    font-size:15px;    
-    text-decoration: none;
-    color:#333;
+
+h1, h2, h3,h4, h5 {
+    font-size:25px; font-weight: 600;
+}
+
+ol, ul,li  {
+	list-style: none;
+}
+img { vertical-align: top; }
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
